Personal Detail updated

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">SAURABH JAIN</span>
+        <span class="d-block d-lg-none">JATIN KHURANA</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -67,24 +67,24 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">SAURABH
-            <span class="text-primary">JAIN</span>
+          <h1 class="mb-0">JATIN
+            <span class="text-primary">KHURANA</span>
           </h1>
-          <div class="subheading mb-5">B-108 Adhunik Apratments, Gujrat college Road, Ahmedabad, India 380006 <br><i class="fas fa-phone"></i> (+91) 9479691291 
-            <br><i class="far fa-envelope"> </i> <a href="mailto:name@email.com"> jainsaurabh3240@gmail.com </a>
+          <div class="subheading mb-5">T-508,Aparna Cyberzon,Nallagandla,Hyderabad - 500019 <br><i class="fas fa-phone"></i> (+91)6395005089 
+            <br><i class="far fa-envelope"> </i> <a href="mailto:name@email.com"> jatinkhurana9@gmail.com </a>
           </div>
           <p class="lead mb-5">I am IIT Bombay, Computer Science, post-graduate (2014-16).
-		  I have worked as Associate Product Engineer/ Data Engineer for 1.5 years, focused on Business Intelliegence solution, analysing data and finding valuable insights.
+		  I worked as Researcher in Knowledge Discovery Lab in NEC Central Research Laboratory Japan(2016-2018). There, I worked on various ML problem like Semantic parsing, Explainable Neural Network etc. 
 		  </p>
 		  <p class="lead mb-5"> 
-		  For the past 6 months working as Machine-Learning / Research Engineer in Health-Care Domain responsible for building Machine Learning and Deep Learning Recommendation System .
+		  Currently I am working as Data Scientist in bing Retail segement Microsoft IDC Hyderabad. My job includes Query analysis, designing ML models on product embedding, Relevant entity extraction and object segmentation in retail domain.
 		  </br>
 		  </p >
 		  <div class="social-icons">
             <a href="https://www.linkedin.com/in/s4ur4bh/">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="https://github.com/saurabh3240">
+            <a href="https://github.com/jkhurana">
               <i class="fab fa-github"></i>
             </a>
             <a href="https://twitter.com/JAINSAURABHJAIN">
@@ -163,7 +163,7 @@
               <h3 class="mb-0">Indian Institue of Technology, Bombay</h3>
               <div class="subheading mb-3">Master of Technology (M.Tech) </div>
               <div>Computer Science</div>
-              <p>GPA: 8.03/10</p>
+              <p>GPA: 9.3/10</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">July 2014 - June 2016</span>
@@ -172,13 +172,13 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Institue of Enginering and Technology, DAVV, Indore</h3>
+              <h3 class="mb-0">ABES Engineering College, Ghaziabad</h3>
 			  <div class="subheading mb-3">Bachelor of Engineering  (B.E.) </div>
               <div >Computer Engineering</div>
-              <p>score: 78.78%</p>
+              <p>score: 79.3%</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2010 - April 2014</span>
+              <span class="text-primary">August 2008 - April 2012</span>
             </div>
           </div>
 
@@ -272,7 +272,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>Apart from Machine learning and Deep learning Also I enjoy competitive programming. 
-		I enjoy playing Badminton & Cricket most. Although I like to try new games and sports . I also enjoy playing computer games.
+		I enjoy playing Badminton & table tennis most. Although I like to try new games and sports.
 		</p>
 		</br>
 		
