--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
 		  </br>
 		  </p >
 		  <div class="social-icons">
-            <a href="https://www.linkedin.com/in/s4ur4bh/">
+            <a href="https://www.linkedin.com/in/jatin-khurana-b4930131/">
               <i class="fab fa-linkedin-in"></i>
             </a>
             <a href="https://github.com/jkhurana">
               <i class="fab fa-github"></i>
             </a>
-            <a href="https://twitter.com/JAINSAURABHJAIN">
+            <a href="https://twitter.com/JatinKh82095173">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://www.facebook.com/saurabh3240">
+            <a href="https://www.facebook.com/jatin.khurana.716">
               <i class="fab fa-facebook-f"></i>
             </a>
           </div>
@@ -295,6 +295,10 @@
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
+		  <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+			  3<sup>rd</sup>
+              Rank in Retail Hackathon in Microsoft Hackathon 2018 for innovative idea</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               All India Rank 59in GATE 2014 among 1,55,190 candidates
