Exp,Interest updated

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-	<link rel="icon" href="img/favicon.jpg">
+	<link rel="icon" href="img/favicon.jpeg">
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
 
@@ -102,7 +102,40 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
-		  Coming Soon.
+		  <div class="subheading mb-3">Data Scientistat Bing, Microsoft India Development Center, Hyderabad</div>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Working in Bing Retail Segment</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Designed a neural network for product SKU embedding using autoencoder and variational autoencoder</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Implemented a deep network for image to query mapping using ResNet architecture</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Defined evaluation metrics of user engagement on follow up query impressions of a given experience</li>
+			  <li>
+              <i class="fa-li fa fa-check"></i>
+              Designed a ranking function to rank explore more suggestion using positional bias and click stream data</li>
+			  <li>
+              <i class="fa-li fa fa-check"></i>
+              Currently working on object segmentation of fashion images. Training mask-rcnn for fashion dataset</li>
+          </ul>
+		  <br/>
+		  <div class="subheading mb-3">Researcher at Knowledge Discovery Lab, NEC Central Research Laboratory, Japan (July 2016- December 2017)</div>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Implemented different architectures of deep neural network like feed forward network, convolutionnetwork, recurrent networks like LSTM, GRU etc</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Designed a semantic parser using LSTM in torch Achieved84.4%accuracy on Geoquery data-set</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Developed an explainable network using deep neural network which explains its output usinginterpretable components. Achieved90.3%accuracy on sentiment analysis data-set with manuallydesigned interpretable components</li>
+          </ul>
 <!--
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
@@ -163,7 +196,7 @@
               <h3 class="mb-0">Indian Institue of Technology, Bombay</h3>
               <div class="subheading mb-3">Master of Technology (M.Tech) </div>
               <div>Computer Science</div>
-              <p>GPA: 9.3/10</p>
+              <p>GPA: 9.29/10</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">July 2014 - June 2016</span>
@@ -175,7 +208,7 @@
               <h3 class="mb-0">ABES Engineering College, Ghaziabad</h3>
 			  <div class="subheading mb-3">Bachelor of Engineering  (B.E.) </div>
               <div >Computer Engineering</div>
-              <p>score: 79.3%</p>
+              <p>score: 79.2%</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2008 - April 2012</span>
@@ -251,7 +284,26 @@
 <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
-          <p>Coming Soon.</p>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Designed a generalized pattern miner framework to extract the set of patterns using Sub-ModularOptimization</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Implemented logistic regression model for classification in R with70%accuracy on Heart Disease Data</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Implemented NEO-Kmeans clustering in MATLAB using L-BFGS algorithm</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Developed a Part of Speech Tagging system for English sentences with94.07%accuracy on brown corpususing HMM(Hidden Markov Model)</li>
+			  <li>
+              <i class="fa-li fa fa-check"></i>
+              Implemented phrase-table triangulation method for pivot-based machine translation with 0.5% incrementedin BLEU score for Hindi-Bengali language using English as pivot language.</li>
+			  <li>
+              <i class="fa-li fa fa-check"></i>
+              Developed a system in MATLAB which takes an image as input and outputs various similar images byextracting various features of Images like contrast, mean color, histogram etc</li>
+          </ul>
 <!--
           <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
         -->
@@ -261,10 +313,20 @@
 	  <hr class="m-0">
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from Machine learning and Deep learning Also I enjoy competitive programming. 
-		I enjoy playing Badminton & table tennis most. Although I like to try new games and sports.
-		</p>
+          <h2 class="mb-5">Extracurricular Activities</h2>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Enjoy playing badminton and table tennis</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  Active member of Hyderabad runner group
+              </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+			  Love to play Chess on chess.com
+              </li>
+          </ul>
 		</br>
 <!--
           <div class="subheading mb-3">Workflow</div>
