Various section updated

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 		  <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#resume">RESUME</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
@@ -74,7 +77,7 @@
             <br><i class="far fa-envelope"> </i> <a href="mailto:name@email.com"> jatinkhurana9@gmail.com </a>
           </div>
           <p class="lead mb-5">I am IIT Bombay, Computer Science, post-graduate (2014-16).
-		  I worked as Researcher in Knowledge Discovery Lab in NEC Central Research Laboratory Japan(2016-2018). There, I worked on various ML problem like Semantic parsing, Explainable Neural Network etc. 
+		  I worked as Researcher at Knowledge Discovery Lab, NEC Central Research Laboratory Japan(2016-2018). There, I worked on various ML problem like Semantic parsing, Explainable Neural Network etc. 
 		  </p>
 		  <p class="lead mb-5"> 
 		  Currently I am working as Data Scientist in Bing Retail segement Microsoft IDC Hyderabad. My job includes query analysis, designing machine learning models on product embedding, relevant entity extraction and object segmentation in retail domain.
@@ -131,10 +134,10 @@
               Implemented different architectures of deep neural network like feed forward network, convolutionnetwork, recurrent networks like LSTM, GRU etc</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Designed a semantic parser using LSTM in torch Achieved84.4%accuracy on Geoquery data-set</li>
+              Designed a semantic parser using LSTM in torch Achieved 84.4% accuracy on Geoquery data-set</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Developed an explainable network using deep neural network which explains its output usinginterpretable components. Achieved90.3%accuracy on sentiment analysis data-set with manuallydesigned interpretable components</li>
+              Developed an explainable network using deep neural network which explains its output usinginterpretable components. Achieved 90.3% accuracy on sentiment analysis data-set with manuallydesigned interpretable components</li>
           </ul>
 <!--
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -247,6 +250,12 @@
 			<li class="list-inline-item">
                <i class="fab"><img src="img/keras.png"></i>
 			</li>
+			<li class="list-inline-item">
+               <i class="fab"><img src="img/scikit-learn.jpg"></i>
+			</li>
+			<li class="list-inline-item">
+               <i class="fab"><img src="img/inkscape.jpg"></i>
+			</li>
             <li class="list-inline-item">
               <i class="devicon-mysql-plain"></i>
             </li>
@@ -310,6 +319,18 @@
 		</div>
 		
       </section>
+	  
+	  <hr class="m-0">
+	  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="resume">
+	  <div class="my-auto">
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0"><a href = "resume/Resume.pdf">Resume (Detailed)</a></h3>
+			  <h3 class="mb-0"><a href="resume/OnePageResume.pdf">Resume (One Page)</a></h3>
+            </div>
+          </div>
+	  </section>
 	  <hr class="m-0">
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
@@ -324,7 +345,7 @@
               </li>
             <li>
               <i class="fa-li fa fa-check"></i>
-			  Love to play Chess on chess.com
+			  Love to play Chess on chess.com (Handle:jkhurana)
               </li>
           </ul>
 		</br>
